--- a/src/main/res/layout/fragment_home.xml
+++ b/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.facebook.android.friendsmash"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -47,7 +47,7 @@
 		    <LinearLayout
 		        android:layout_width="wrap_content"
 		    	android:layout_height="wrap_content"
-		        android:layout_marginLeft="26dp"
+		        android:layout_marginLeft="36dp"
 		        android:layout_marginTop="10dp"
 		    	android:orientation="vertical"
 		    	>
@@ -64,7 +64,7 @@
 			        android:id="@+id/youScoredTextView"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
-					android:paddingLeft="60dp"
+					android:paddingLeft="30dp"
 					style="@style/YouScoredFont"
 			        android:text="@string/you_scored_message" />
 		        
