--- a/src/main/res/layout/fragment_home_fb_logged_out.xml
+++ b/src/main/res/layout/fragment_home_fb_logged_out.xml
@@ -16,7 +16,7 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.facebook.android.friendsmash"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -47,7 +47,7 @@
 		    <LinearLayout
 		        android:layout_width="wrap_content"
 		    	android:layout_height="wrap_content"
-		        android:layout_marginLeft="40dp"
+		        android:layout_marginLeft="50dp"
 		        android:layout_marginTop="14dp"
 		    	android:orientation="vertical"
 		    	>
