--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -1,11 +1,19 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:id="@+id/login"
         android:orderInCategory="100"
-        android:showAsAction="always"
         android:icon="@drawable/ic_launcher"
-        android:title="Login"/>
+        android:title="Reset"
+        app:showAsAction="always" />
+		
+		    <item
+        android:id="@+id/conquistas"
+        android:orderInCategory="100"
+                android:icon="@drawable/ic_launcher"
+        android:title="Lista Conquistas"
+                app:showAsAction="always" />
 
 
 </menu>
