--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/login"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/cursoricon_512x512"
         android:title="Reset"
         app:showAsAction="always" />
 		
